# IVP_IVR_OPTIMIZATION

./: backtest.py  backtest_opt_ETF.py  backtest_opt_all_ins.py  backtest_opt_stocks.py  backtest_optimization.py  config.yaml  functions.py  makemetricpng.py  pyproject.toml  savetopdf.py  test.ipynb
